# smd

./: .env  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  ROADMAP.md  flake.nix  init.bat  init.sh  main.c  nutte.yaml  package-lock.json  package.json  readme.html  readme.md  release.sh  rustfmt.toml  todo
.cliff/: default.toml  detailed.toml
.github/workflows/: main.yaml  release.yaml
c/: main.c  package.json  smd
c/lib/: nec.c  smd.c
c/scripts/: init.bat
configuration/: base.yaml  production.yaml
gfm/: Cargo.toml
gfm/src/: iter.rs  lexer.rs  lib.rs  parser.rs  token.rs
gfm/tests/: main.rs
gfm/tests/gfm/: atx_headings.rs  autolinks.rs  autolinks_extention.rs  backslash_escapes.rs  blank_lines.rs  block_quotes.rs  blocks_and_inlines.rs  code_spans.rs  disallowed_raw_html.rs  emphasis_and_strong_emphasis.rs  entity_and_numeric_character_references.rs  fenced_code_blocks.rs  hard_line_breaks.rs  html_blocks.rs  images.rs  indented_code_blocks.rs  inlines.rs  link_reference_definitions.rs  links.rs  list_items.rs  lists.rs  paragraphs.rs  raw_html.rs  setext_headings.rs  soft_line_breaks.rs  strikethrough.rs  tables.rs  tabs.rs  task_list_items.rs  textual_context.rs  thematic_breaks.rs
lib/: nec.c  nec.h  smd.c  smd.h
npm/: package.json.tmpl
npm/smd/: package.json
npm/smd/src/: index.ts
old/: CMakeLists.txt  main.c  package-lock.json  readme.md
old/scripts/: build-release.sh  build.sh  init.sh  install.bat  install.sh
old/src/: config.rs  fio.rs  lib.rs  main.rs  mdflavour.rs  utils.rs
pypi/: pyproject.toml
scripts/: build.sh  init.bat  init.sh  install.sh  reset_conf.sh
smd/: Cargo.toml
smd-core/: Cargo.toml
smd-core/src/: browser.rs  config.rs  convert.rs  error.rs  fs.rs  lib.rs  vendor.rs
smd-core/src/gfm/: ROADMAP.md  iter.rs  lexer.rs  mod.rs  parser.rs  token.rs
smd-core/tests/: main.rs
smd-core/tests/gfm/: atx_headings.rs  autolinks.rs  autolinks_extention.rs  backslash_escapes.rs  blank_lines.rs  block_quotes.rs  blocks_and_inlines.rs  code_spans.rs  disallowed_raw_html.rs  emphasis_and_strong_emphasis.rs  entity_and_numeric_character_references.rs  fenced_code_blocks.rs  hard_line_breaks.rs  html_blocks.rs  images.rs  indented_code_blocks.rs  inlines.rs  link_reference_definitions.rs  links.rs  list_items.rs  lists.rs  paragraphs.rs  raw_html.rs  setext_headings.rs  soft_line_breaks.rs  strikethrough.rs  tables.rs  tabs.rs  task_list_items.rs  textual_context.rs  thematic_breaks.rs
smd/src/: args.rs  lib.rs  logger.rs  main.rs
smd_lib/: Cargo.toml  README.md
smd_lib/src/: lib.rs
smd_lib/src/lexer/: lexer.rs  token.rs
src/: api.rs  browser.rs  config.rs  error.rs  file_access.rs  fio.rs  lib.rs  main.rs  mdflavour.rs  skeleton.rs  smd.rs  startup.rs  utils.rs
src/commands/: command.rs  help.rs  mod.rs  version.rs
src/commands/flavour/: add.rs  edit.rs  flavour.rs  flavour_base.rs  mod.rs  remove.rs  set.rs  update.rs
src/commands/flavours/: add.rs  current.rs  edit.rs  flavour.rs  list.rs  mod.rs  new.rs  remove.rs  set.rs  update.rs
src/configuration/: configuration.rs  env_check.rs  initialize.rs  mod.rs  updater.rs
src/io/: file_read.rs  file_write.rs  mod.rs
src/markdown/: flavour.rs  mod.rs  parser.rs
src/utils/: browser.rs  error_handling.rs  mod.rs
