[package]
name = "smd"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "smd"

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[workspace]
members = [".", "smd_lib"]

[dependencies]
smd_lib = { path = "smd_lib" }
