[workspace]
resolver = "2"
members = ["smd-core", "smd"]

[workspace.dependencies]
log = "0.4.21"
dirs = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = true # used by the profiler
strip = false # keep symbols for the profiler
