[package]
name = "gfm"
version = "0.1.0-pre"
description = "Transpililing markdown to github flavoured markdown (html)"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/flokkq/smd"
keywords = ["markdown", "gfm", "convert", "md2html"]
edition = "2021"

[dependencies]
log.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
