[package]
name = "smd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
url.workspace = true
thiserror = "2.0.4"
headless_chrome = "1.0.15"
ureq = "2.12.1"

[dependencies.config]
version = "0.14.1"
default-features = false
features = ["toml"]

[dev-dependencies]
tokio = "1.42.0"
wiremock = "0.6.2"
