[package]
name = "smd-core"
version = "0.1.3-pre"
edition = "2021"

[dependencies]
log.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
thiserror = "2.0.4"
headless_chrome = "1.0.15"

[dependencies.config]
version = "0.14.1"
default-features = false
features = ["toml"]
