[package]
name = "smd"
version = "0.1.0" # managed by release.sh
description = "convert markdown to github flavoured html or pdf 🎨"

license = "MIT"
readme = "../README.md"
repository = "https://github.com/flokkq/smd"
keywords = ["gfm", "markdown", "html", "pdf", "convert"]
categories = ["command-line-utilities"]
default-run = "smd"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "smd"

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
log.workspace = true

[dependencies.smd-core]
version = "0.1.0" # managed by release.sh
path = "../smd-core"
