[package]
name = "smd"
version = "0.1.0" # managed by release.sh
description = "convert markdown to github flavoured html or pdf 🎨"
authors = ["Flokkq"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/flokkq/smd"
keywords = ["gfm", "markdown", "html", "pdf", "convert"]
categories = ["command-line-utilities"]
default-run = "smd"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "smd"

[[bin]]
name = "smd-mangen"
path = "src/bin/mangen.rs"

[[bin]]
name = "smd-completions"
path = "src/bin/completion.rs"

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
log.workspace = true
dirs.workspace = true
toml.workspace = true
clap = { version = "4.5.21", features = ["derive", "env", "wrap_help", "cargo"] }
shellexpand = "3.1.0"
env_logger = "=0.10.2"
clap_mangen = "0.2.23"
clap_complete = "4.5.19"

[dependencies.smd-core]
version = "0.1.0" # managed by release.sh
path = "../smd-core"

[dependencies.gfm]
version = "0.1.0" # managed by release.sh
path = "../gfm"
